--- a/index.html
+++ b/index.html
@@ -31,91 +31,97 @@
 
 <body>
   <div id="content">
-  <header>
-    <h1>10,000+ of our users love our products.</h1>
-    <div id="description">
-    <p>
-      We only provide great products combined with excellent customer service.
-      See what our satisfied customers are saying about our services.
-    </p>  
-    </div>
-  </header>
-
-  
-
-<div id="ratings">
-  <div class="rating">
-    <div class="stars">
-    </div>
-    <p>Rated 5 Stars in Reviews</p>
-  </div>
-
-  <div class="rating">
-    <div class="stars">
-    </div>
-    <p>Rated 5 Stars in Report Guru</p>
-  </div>
-
-  <div class="rating">
-    <div class="stars">
-    </div>
-    <p>Rated 5 Stars in BestTech</p>
-  </div>
-</div>
-
-<div id="feedbacks">
-    <div class="feedback">
-      <div class="person">
-        <div class="person-img">
-          <img src="./images/image-colton.jpg" alt="Person Picture">
+    <div class="row">
+      <header>
+        <h1>10,000+ of our users love our products.</h1>
+        <div id="description">
+          <p>
+            We only provide great products combined with excellent customer service.
+            See what our satisfied customers are saying about our services.
+          </p>
         </div>
-        <div class="person-attributes">
-          <p class="person-name">Colton Smith</p>
-          <p class="person-title">Verified Buyer</p>
+      </header>
+
+      <div id="ratings">
+        <div class="rating">
+          <div class="stars">
+          </div>
+          <div class="rating-text">
+            <p>Rated 5 Stars in Reviews</p>
+          </div>
+        </div>
+
+        <div class="rating">
+          <div class="stars">
+          </div>
+          <div class="rating-text">
+            <p>Rated 5 Stars in Report Guru</p>
+          </div>
+        </div>
+
+        <div class="rating">
+          <div class="stars">
+          </div>
+          <div class="rating-text">
+            <p>Rated 5 Stars in BestTech</p>
+          </div>
         </div>
       </div>
-      <p class="feedback-msg">"We needed the same printed design as the one we had ordered a week prior.
-        Not only did they find the original order, but we also received it in time.
-        Excellent!"</p>
     </div>
-
-    <div class="feedback">
-      <div class="person">
-        <div class="person-img">
-          <img src="./images/image-irene.jpg" alt="Person Picture">
+    <div class="row">
+    <div id="feedbacks">
+      <div class="feedback">
+        <div class="person">
+          <div class="person-img">
+            <img src="./images/image-colton.jpg" alt="Person Picture">
+          </div>
+          <div class="person-attributes">
+            <p class="person-name">Colton Smith</p>
+            <p class="person-title">Verified Buyer</p>
+          </div>
         </div>
+        <p class="feedback-msg">"We needed the same printed design as the one we had ordered a week prior.
+          Not only did they find the original order, but we also received it in time.
+          Excellent!"</p>
+      </div>
+
+      <div class="feedback">
+        <div class="person">
+          <div class="person-img">
+            <img src="./images/image-irene.jpg" alt="Person Picture">
+          </div>
           <div class="person-attributes">
             <p class="person-name">Irene Roberts</p>
             <p class="person-title">Verified Buyer</p>
           </div>
+        </div>
+        <div class="feedback-msg">
+          <p>"Customer service is always excellent and very quick turn around. Completely
+            delighted with the simplicity of the purchase and the speed of delivery."</p>
+        </div>
       </div>
-      <div class="feedback-msg">
-        <p>"Customer service is always excellent and very quick turn around. Completely
-        delighted with the simplicity of the purchase and the speed of delivery."</p>
-      </div>
-    </div>
 
-  <div class="feedback">
-    <div class="person">
-      <div class="person-img">
-        <img src="./images/image-anne.jpg" alt="Person Picture">
+      <div class="feedback">
+        <div class="person">
+          <div class="person-img">
+            <img src="./images/image-anne.jpg" alt="Person Picture">
+          </div>
+          <div class="person-attributes">
+            <p class="person-name">Anne Wallace</p>
+            <p class="person-title">Verified Buyer</p>
+          </div>
+        </div>
+        <div class="feedback-msg">
+          <p>"Put an order with this company and can only praise them for the very high
+            standard. Will definitely use them again and recommend them to everyone!"</p>
+        </div>
       </div>
-      <div class="person-attributes">
-        <p class="person-name">Anne Wallace</p>
-        <p class="person-title">Verified Buyer</p>
-      </div>
-    </div>
-    <div class="feedback-msg">
-      <p>"Put an order with this company and can only praise them for the very high
-      standard. Will definitely use them again and recommend them to everyone!"</p>
     </div>
   </div>
+
   </div>
 
-
-</div>
-  
-<div class="attribution">
+  <div class="attribution">
     Challenge by
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
     .Coded by
